--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,16 @@
 <ion-split-pane>
     <ion-menu [content]="conteudo">
         <ion-content>
+            <ion-item id="cabecalho-menu" class="cabecalho-menu">
+                <div>
+                    <ion-avatar item-start>
+                        <img src="assets/img/avatar-profile.jpg">
+                    </ion-avatar>
+                </div>
+                <h2>Lucas Maciel</h2>
+                <p>lucas.maciel@totvs.com</p>
+            </ion-item>
+
             <ion-list>
                 <button ion-item menuClose *ngFor="let pagina of paginas" (click)="irParaPagina(pagina.componente)">
 
